# mimus

./: .coveragerc  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  doc.yml  lint.yml  test.yml
docs/: mkdocs.yml
docs/source/: example.yml
features/steps/: helloworld_steps.py
mimus/: __init__.py  importer.py  parser.py
mimus-cli/: go.mod  main.go
mimus-cli/cmd/: init.go  root.go
mimus/cli/: dispatcher.py  error.py  main.py
mimus/config/: config.py  configitem.py  error.py  parser.py
tests/mimus/: test_importer.py  test_parser.py
tests/mimus/cli/: test_dispatcher.py
tests/mimus/config/: test_error.py  test_parser.py
tests/mimus/config/test_parser/: test_parse_include.yml  test_parse_root.yml
